    o #988726 by yhahn: Use taxonomy_term_data 'format' column for description field.
    o #988520 by dereine: Fix sql of date handler for offset.
    o #952636 by yhahn, jmiccolis, dagmar, dereine: Support string format identifiers.
    o #960810: Fixed merge error of semantic views patch.
    o #769458 by anrikun: Fix double encoding of alt/title text on link rewriting.
    o #318944 by dereine: Prevent warning in table view when user has no permission to view any fields.
    o #416178 by dereine: Profile field checkboxes did not properly filter false values.
    o #949526 by dereine: External database not used.
    o #913688 by dereine: Fix feed icon path.
    o #768802 by dereine: Allow sort by node language.
    o #600742 by dagmar: Allow displays to be disabled.
    o reported by swentel: Remove left over debugging dsm.
    o #468484 by dereine: Filter by unread not relationship safe.
    o #833790 redux by dereine: Make sure field actually exists.
    o #607942 by dashton: Support "rel" attribute in link rewriting.
    o #994014 by idflood: Add missing semicolon to node translation link handler.
    o #909886: -Any- option shows up on boolean exposed filters even when not optional.
    o #972934 by dereine: Fix sql of subquery of comment_user_uid argument handler.
    o Follow up #607942, use ctools_dependent_process.
    o #817360 by John Morahan: Have Analyze button warn if view has no access control.
    o #898990 by dereine: Fix bad SQL generated on related terms relationship if no vocabularies selected.
    o #833220 by dereine: Properly validate value on date filter.
    o #910256 by dagmar: Add an - All - option to exposed items per page.
    o #779668 by esteewhy: Fix not technically valid use of break statements.
    o #909332 by dereine: Add col-first and col-last classes to grid style.
    o #989092 by dereine: Semantic views integration broke grid view a little.