@@ -533,3 +533,4 @@ Views 3.x-7.x-dev
     o #779668 by esteewhy: Fix not technically valid use of break statements.
     o #909332 by dereine: Add col-first and col-last classes to grid style.
     o #989092 by dereine: Semantic views integration broke grid view a little.
+    o #868972 by dereine: Add a "summary" attribute for accessibility on table and grid styles.
